# obsidian-copy

./: Cargo.toml  README.md
src/: frontmatter.rs  lib.rs  main.rs  references.rs
tests/testdata/expected/main-samples/: public.md
tests/testdata/input/main-samples/: misc.json  no tags.md  private and public.md  private.md  public.md
