[package]
name = "obsidian-copy"
version = "0.1.0"
authors = ["James Jensen <jamesarthurjensen@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jajaperson/obsidian-copy"
documentation = "https://docs.rs/obsidian-copy"
description = """
Rust library and associated CLI program to copy part of an Obsidian vault to an external directory
according to filters.
"""
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "obsidian"]

[lib]
name = "obsidian_copy"
path = "src/lib.rs"

[[bin]]
name = "obsidian-copy"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
ignore = "0.4.23"
pulldown-cmark = "0.12.2"
serde_yaml = "0.9.34"
snafu = "0.8.5"
